# VerletSwing

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitignore  .prettierrc  CMakeLists.txt  README.md
.github/workflows/: release.yml
src/: cmake.h.in  draw.c  draw.h  fmt.c  fmt.h  fs.h  game.c  game.h  main.c  menu.c  menu.h  monke.c  monke.h  sdl.c  sdl.h  vec2.c  vec2.h  verlet.c  verlet.h
